# STELLAR

./: .gitignore  pyproject.toml  requirements.txt
examples/: example.stellar
stellar/: __init__.py  __main__.py  config.py  server.py
stellar/functions/: builtin.py
stellar/modules/: dummy.py
vscode-extension/: .gitignore  package-lock.json  package.json
vscode-extension/stellar-language-bindings/: CHANGELOG.md  LICENSE.md  README.md  language-configuration.json  package-lock.json  package.json
vscode-extension/stellar-language-bindings/src/: extension.ts
vscode-extension/stellar-language-bindings/syntaxes/: stellar-grammar.tmLanguage.json
